--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,600;1,600&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    width: 100%;
+    min-height: 100vh;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("./assets/images/microphone-2130806__480.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
+
+i {
+    cursor: pointer;
+    user-select: none;
+}
+
+ul {
+    list-style: none;
+}
+
+main {
+    width: 360px;
+    border-radius: 15px;
+    border: 1px solid rgba(255, 255,255,0.1 );
+    box-shadow: 0 0 20px rgba(7 ,15,15,0.5 );
+    overflow: hidden;
+    position: relative;
+    backdrop-filter: blur(3px);
+}
+
+
+.container {
+    width: 360px;
+    border-radius: 15px;
+    position: relative;
+}
+
+.shape {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    border-radius: 50%;
+}
+
+
+input[type="range"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: #e5e5e5;
+    border-radius: 50px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: #4286f4;
+    border-radius: 50%;
+    cursor: grab;
+    width: 10px;
+    height: 10px;
+}
+
